assets/css/admin.css
.upload-php .wp-list-table .column-title,
.upload-php .wp-list-table .column-file {
    width: 24%;
    min-width: 260px;
}

.upload-php .wp-list-table .column-geweb_ai_indexed {
    min-width: 220px;
}

.edit-php.post-type-page .wp-list-table {
    table-layout: auto;
    min-width: 1040px;
}

.edit-php.post-type-page .wp-list-table .column-title {
    width: 32%;
    min-width: 260px;
}

.edit-php.post-type-page .wp-list-table .column-author {
    width: 12%;
    min-width: 120px;
}

.edit-php.post-type-page .wp-list-table .column-date,
.edit-php.post-type-page .wp-list-table .column-geweb_last_modified {
    width: 12%;
    min-width: 130px;
}

.edit-php.post-type-page .wp-list-table .column-geweb_post_id {
    width: 64px;
}

.edit-php.post-type-page .wp-list-table .column-geweb_ai_indexed {
    width: 180px;
    min-width: 180px;
}

.edit-php.post-type-page .wp-list-table .column-geweb_ai_markdown_cache {
    width: 96px;
    min-width: 96px;
}

.upload-php .wp-list-table .column-title .title,
.upload-php .wp-list-table .column-file .title,
.upload-php .wp-list-table .column-title .row-title,
.upload-php .wp-list-table .column-file .row-title,
.edit-php.post-type-page .wp-list-table .column-title .row-title {
    display: inline-block;
    max-width: 100%;
    overflow-wrap: anywhere;
    word-break: normal;
}

.upload-php .wp-list-table .column-title img,
.upload-php .wp-list-table .column-file img {
    max-width: 100%;
    height: auto;
}

.geweb-referenced-documents-table-form .geweb-referenced-documents-search-toggle {
    display: none;
}

@media (max-width: 782px) {
    .geweb-referenced-documents-table-form.geweb-referenced-documents-search-ready .geweb-referenced-documents-search-toggle {
        display: inline-flex;
        align-items: center;
        margin: 0 0 8px;
    }

    .geweb-referenced-documents-table-form .search-box.is-collapsed {
        display: none;
    }
}

